ast/expr.y
// expr.y
%{
package ast

import (
    //"reflect"
)

%}
%token IDENT NUMBER STRING BOOL NIL EQ AND OR NOTEQ GT GTE LT LTE ORR ACC IF ELSE FOR IN ACC2 CONST LAMB ADDEQ SUBEQ MULEQ DIVEQ VARIADIC AS
%left IDENT EXIT
%left IF ELSE END DO ELSEIF THEN FOR SWITCH CASE DEFAULT FUNCTION ANNO BREAK
%left ';'
%left LAMB
%left AS
%right '='

%right '?'
%left ':'
%right ORR
%right OR
%right AND
%left EQ   NOTEQ  GT GTE LT LTE IN  EQT NOTEQT
%left ADDEQ SUBEQ MULEQ DIVEQ ADDADD SUBSUB
%left '+' '-'
%left '*' '/'
%left '%'
%left '&' '|'
%right '!'
%right '^'
%left '@' NONIL
%left ACC '[' ']'
%left VARIADIC
%right UMINUS
%right ACC2
%right CONST


%%

Input:
	   Expr { yylex.(Setter).SetRoot(yyS[yypt-0].node); yyVAL.node = yyS[yypt-0].node }
	;

Expr:
	  Expr '+' Expr       { yyVAL.node = &Binary{Op:"+", L: yyS[yypt-2].node, R: yyS[yypt-0].node} }
	| Expr '-' Expr       { yyVAL.node = &Binary{Op:"-", L: yyS[yypt-2].node, R: yyS[yypt-0].node} }
	| Expr '*' Expr       { yyVAL.node = &Binary{Op:"*", L: yyS[yypt-2].node, R: yyS[yypt-0].node} }
	| Expr '/' Expr       { yyVAL.node = &Binary{Op:"/", L: yyS[yypt-2].node, R: yyS[yypt-0].node} }
	| Expr '^' Expr       { yyVAL.node = &Binary{Op:"^", L: yyS[yypt-2].node, R: yyS[yypt-0].node} }
	| Expr '&' Expr        { yyVAL.node = &Binary{Op:"&", L: yyS[yypt-2].node, R: yyS[yypt-0].node} }
	| Expr '|' Expr        { yyVAL.node = &Binary{Op:"|", L: yyS[yypt-2].node, R: yyS[yypt-0].node} }
	| Expr  EQ Expr        { yyVAL.node = &Binary{Op:"==", L: yyS[yypt-2].node, R: yyS[yypt-0].node} }
	| Expr  EQT Expr        { yyVAL.node = &Binary{Op:"===", L: yyS[yypt-2].node, R: yyS[yypt-0].node} }
	| Expr  NOTEQT Expr        { yyVAL.node = &Binary{Op:"!==", L: yyS[yypt-2].node, R: yyS[yypt-0].node} }
	| Expr  '%' Expr        { yyVAL.node = &Binary{Op:"%", L: yyS[yypt-2].node, R: yyS[yypt-0].node} }
	| Expr  ';' Expr        { yyVAL.node = &Binary{Op:";", L: yyS[yypt-2].node, R: yyS[yypt-0].node} }
	| Expr ';'              {$$.node  = $1.node }
	| Ident  '=' Expr        { yyVAL.node = &Set{L: yyS[yypt-2].node, R: yyS[yypt-0].node} }
	| Var  '=' Expr        { yyVAL.node = &Set{L: yyS[yypt-2].node, R: yyS[yypt-0].node} }
	| ArrIndex  '=' Expr        { yyVAL.node = &Set{L: yyS[yypt-2].node, R: yyS[yypt-0].node} }
	| Ident  ADDEQ Expr        { $$.node = &Binary{Op:"+=", L: $1.node, R: $3.node} }
	| Var  ADDEQ Expr        { $$.node = &Binary{Op:"+=", L: $1.node, R: $3.node} }
	| ArrIndex  ADDEQ Expr        { $$.node = &Binary{Op:"+=", L: $1.node, R: $3.node} }
	| Ident  SUBEQ Expr        { $$.node = &Binary{Op:"-=", L: $1.node, R: $3.node} }
	| Var  SUBEQ Expr        { $$.node = &Binary{Op:"-=", L: $1.node, R: $3.node} }
	| ArrIndex  SUBEQ Expr        { $$.node = &Binary{Op:"-=", L: $1.node, R: $3.node} }
	| Ident  MULEQ Expr        { $$.node = &Binary{Op:"*=", L: $1.node, R: $3.node} }
	| Var  MULEQ Expr        { $$.node = &Binary{Op:"*=", L: $1.node, R: $3.node} }
	| ArrIndex  MULEQ Expr        { $$.node = &Binary{Op:"*=", L: $1.node, R: $3.node} }
	| Ident  DIVEQ Expr        { $$.node = &Binary{Op:"/=", L: $1.node, R: $3.node} }
	| Var  DIVEQ Expr        { $$.node = &Binary{Op:"/=", L: $1.node, R: $3.node} }
	| ArrIndex  DIVEQ Expr        { $$.node = &Binary{Op:"/=", L: $1.node, R: $3.node} }
	| Expr  AND Expr        { yyVAL.node = &Binary{Op:"&&", L: yyS[yypt-2].node, R: yyS[yypt-0].node} }
	| Expr  OR Expr        { yyVAL.node = &Binary{Op:"||", L: yyS[yypt-2].node, R: yyS[yypt-0].node} }
	| Expr  NOTEQ Expr        { yyVAL.node = &Binary{Op:"!=", L: yyS[yypt-2].node, R: yyS[yypt-0].node} }
	| Expr  GT Expr        { yyVAL.node = &Binary{Op:">", L: yyS[yypt-2].node, R: yyS[yypt-0].node} }
	| Expr  GTE Expr        { yyVAL.node = &Binary{Op:">=", L: yyS[yypt-2].node, R: yyS[yypt-0].node} }
	| Expr  LT Expr        { yyVAL.node = &Binary{Op:"<", L: yyS[yypt-2].node, R: yyS[yypt-0].node} }
	| Expr  LTE Expr        { yyVAL.node = &Binary{Op:"<=", L: yyS[yypt-2].node, R: yyS[yypt-0].node} }

	| Expr  ORR Expr        { yyVAL.node = &Binary{Op: "orr",L:$1.node,R:$3.node } }
	| Expr  AS Ident        { yyVAL.node = &Binary{Op: "as",L:$1.node,R:$3.node } }
	| '!' Expr        { yyVAL.node = &Unary{Op:"!", X: yyS[yypt-0].node}  }
	| Expr ADDADD      { $$.node = &Unary{Op:"++", X: $1.node}  }
	| Expr SUBSUB        { $$.node = &Unary{Op:"--", X: $1.node}  }
	| Expr VARIADIC        { $$.node = &Unary{Op:"...", X: $1.node}  }
	| '-' Expr  %prec UMINUS { yyVAL.node = &Unary{Op:"-", X: yyS[yypt-0].node} }
	| Expr '?' Expr ':' Expr { yyVAL.node = &Ternary{C:$1.node ,L:$3.node, R:$5.node} }
	| Expr NONIL { $$.node = &NotNil{$1.node}}
	| Expr '@'  { $$.node = &NotNil{$1.node}}
	| '{' Ids '}' LAMB  Expr  {  $$.node = &Lambda{L: $2.strs , R:$5.node } }
	| Expr LAMB '{' Expr '}'  {  $$.node = &Lambda2{L: $1.node , R:$4.node } }
	| FOR IDENT ',' IDENT IN Expr  DO Expr END {  $$.node = &ForRange{KName: $2.str, VName:$4.str,Var:$6.node,Do:$8.node }   }
	| FOR IDENT IN Expr  DO Expr END {  $$.node = &ForRange{VName:$2.str,Var:$4.node,Do:$6.node }   }
	| IF Expr THEN EExpr END   {  $$.node = &IfElse{Cond: $2.node,Then: $4.node } }
	| IF Expr THEN EExpr ELSE EExpr END   {  $$.node = &IfElse{Cond: $2.node,Then: $4.node,Else: $6.node } }
	| IF Expr THEN EExpr Elseifs END {  $$.node = &IfElse{Cond: $2.node,Then: $4.node,Elseifs: $5.nodes } }
	| IF Expr THEN EExpr Elseifs ELSE EExpr END {  $$.node = &IfElse{Cond: $2.node,Then: $4.node,Elseifs: $5.nodes ,Else: $7.node} }
	| SWITCH Expr Cases END { $$.node = &Switch{Var :$2.node , Cases: $3.nodes}}
	| SWITCH Expr Cases DEFAULT ':' EExpr END { $$.node = &Switch{Var :$2.node , Cases: $3.nodes ,Default: $6.node}}
	| BREAK { $$.node = &Break{}}

//	| '(' ArgListOpt ')' LAMB  Expr  {  $$.node = &Lambda{L: $2.strs , R:$5.node } }
//	| '(' ArgList ')' LAMB Expr %prec LAMB {  $$.node = &Lambda{L: $2.strs , R:$5.node } }
	|  IDENT LAMB Expr {
	    $$.node = &Lambda{L:[]string{$1.str}, R:$3.node }
	 }
	| CONST Expr { $$.node = &Const{L: $2.node} }
	| Expr IN Expr  { $$.node = &Binary{Op: "in",L:$1.node,R:$3.node } }
	| Ident               { $$.node = $1.node }
	| Primary             { yyVAL.node = yyS[yypt-0].node }
	| FUNCTION Ident '(' Idss ')' EExpr END  {  $$.node = &Set{L:$2.node, R:&Lambda{L: $4.strs , R:$6.node }} }
	| FUNCTION '(' Idss ')' EExpr END {  $$.node = &Lambda{L: $3.strs , R:$5.node } }
	| NUMBER '~' NUMBER { $$.node = &RangeValue{L: $1.num , R: $3.num} }

	;

Elseifs:
    elseif  { $$.nodes = []Node{$1.node}}
    | Elseifs elseif { $$.nodes = append($1.nodes, $2.node)}

elseif:
    ELSEIF Expr THEN EExpr  { $$.node = &ElseIf{Cond: $2.node ,Then: $4.node} }

Cases:
    Case { $$.nodes = []Node{$1.node}}
    | Cases Case { $$.nodes = append($1.nodes,$2.node)}
Case:
   // CASE Expr ':' EExpr { $$.node = &Case{Var: $2.node, Do: $4.node}}
    CASE ArgList ':' EExpr { $$.node = &Case{Vars: $2.nodes, Do: $4.node} }

 EExpr:
    { $$.node = nil }
    |Expr { $$.node = $1.node}


Ids:
    Ident { $$.strs = []string{$1.str} }
    |Ids ',' Ident {  $$.strs = append($1.strs,$3.str) }

Idss:
       { $$.strs = []string{}}
    |Ident { $$.strs = []string{$1.str} }
    |Idss ',' Ident {  $$.strs = append($1.strs,$3.str) }
Var:
    Expr ACC Ident  %prec ACC  { $$.node = &Access{L: $1.node,R:$3.node}}
    |Expr ACC ArrIndex  %prec ACC  { $$.node = &Access{L: $1.node,R:$3.node}}

Acc:
    Expr ACC Expr %prec ACC     {  $$.node = &Access{L: $1.node,R:$3.node} }

Ident:
    IDENT                       { $$.node = &Variable{Name: $1.str} ; $$.str = $1.str }

Primary:
	  NUMBER         { yyVAL.node = &Number{Val: yyS[yypt-0].num} }
	| BOOL           { yyVAL.node = &Bool{Val:yyS[yypt-0].boolean} }
	| STRING {yyVAL.node = &String{Val: yyS[yypt-0].str};$$.str = $1.str }
	| NIL    {yyVAL.node = &Nil{} }
	| Ident '(' ArgListOpt ')' { yyVAL.node = &Call{Name: yyS[yypt-3].str, Args: yyS[yypt-1].nodes} }
	| '(' Expr ')'    { yyVAL.node = yyS[yypt-1].node }
	| '{' KvsOpt '}'  { $$.node = &MapSet{Kvs: $2.kvs}  }
	| '[' ArgListOpt ']' { $$.node = &ArrDef{V:$2.nodes}  }
	| ArrIndex {  $$.node = $1.node }
	| Acc   {   $$.node = $1.node }
	| Expr '[' SliceN ':' SliceN ']' {  $$.node = &SliceCut{V: $1.node,St: $3.node,Ed:$5.node} }

	;




SliceN:
    /*empty*/ { $$.node = nil }
    |Expr { $$.node = $1.node}

ArrIndex:
    Expr '[' Expr ']'	 {  $$.node = &ArrAccess{L:$1.node ,R:$3.node} }

KvsOpt:
    /*empty*/ {  $$.kvs = nil  }
    |Kvs { $$.kvs = $1.kvs  }
    ;
Kvs:
    Kv  {   $$.kvs = []KV{$1.kv}}
    |Kvs ',' Kv { $$.kvs  = append($1.kvs,$3.kv) }
    |Kvs ','  { $$.kvs  = $1.kvs }
    ;
Kv:
    STRING ':' Expr {  $$.kv = KV{ K:$1.str, V: $3.node} }
    |IDENT ':' Expr {  $$.kv = KV{ K:$1.str, V: $3.node} }
    ;

ArgListOpt:
	  /* empty */         { yyVAL.nodes = nil }
	| ArgList             { yyVAL.nodes = yyS[yypt-0].nodes }
	;

ArgList:
	  Expr                { yyVAL.nodes = []Node{ yyS[yypt-0].node } }
	| ArgList ',' Expr    { yyVAL.nodes = append(yyS[yypt-2].nodes, yyS[yypt-0].node)  }
	| ArgList ','     { $$.nodes = $1.nodes  }
	;

%%
