ast/y.output

state 0
	$accept: .Input $end 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Input  goto 1
	Expr  goto 2
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 1
	$accept:  Input.$end 

	$end  accept
	.  error


state 2
	Input:  Expr.    (1)
	Expr:  Expr.'+' Expr 
	Expr:  Expr.'-' Expr 
	Expr:  Expr.'*' Expr 
	Expr:  Expr.'/' Expr 
	Expr:  Expr.'^' Expr 
	Expr:  Expr.'&' Expr 
	Expr:  Expr.'|' Expr 
	Expr:  Expr.EQ Expr 
	Expr:  Expr.EQT Expr 
	Expr:  Expr.NOTEQT Expr 
	Expr:  Expr.'%' Expr 
	Expr:  Expr.';' Expr 
	Expr:  Expr.';' 
	Expr:  Expr.AND Expr 
	Expr:  Expr.OR Expr 
	Expr:  Expr.NOTEQ Expr 
	Expr:  Expr.GT Expr 
	Expr:  Expr.GTE Expr 
	Expr:  Expr.LT Expr 
	Expr:  Expr.LTE Expr 
	Expr:  Expr.ORR Expr 
	Expr:  Expr.AS Ident 
	Expr:  Expr.ADDADD 
	Expr:  Expr.SUBSUB 
	Expr:  Expr.VARIADIC 
	Expr:  Expr.'?' Expr ':' Expr 
	Expr:  Expr.NONIL 
	Expr:  Expr.'@' 
	Expr:  Expr.LAMB '{' Expr '}' 
	Expr:  Expr.IN Expr 
	Var:  Expr.ACC Ident 
	Var:  Expr.ACC ArrIndex 
	Acc:  Expr.ACC Expr 
	Primary:  Expr.'[' SliceN ':' SliceN ']' 
	ArrIndex:  Expr.'[' Expr ']' 

	EQ  shift 31
	AND  shift 36
	OR  shift 37
	NOTEQ  shift 38
	GT  shift 39
	GTE  shift 40
	LT  shift 41
	LTE  shift 42
	ORR  shift 43
	ACC  shift 53
	IN  shift 52
	LAMB  shift 51
	VARIADIC  shift 47
	AS  shift 44
	';'  shift 35
	'?'  shift 48
	EQT  shift 32
	NOTEQT  shift 33
	ADDADD  shift 45
	SUBSUB  shift 46
	'+'  shift 24
	'-'  shift 25
	'*'  shift 26
	'/'  shift 27
	'%'  shift 34
	'&'  shift 29
	'|'  shift 30
	'^'  shift 28
	'@'  shift 50
	NONIL  shift 49
	'['  shift 54
	.  reduce 1 (src line 41)


state 3
	Expr:  Ident.'=' Expr 
	Expr:  Ident.ADDEQ Expr 
	Expr:  Ident.SUBEQ Expr 
	Expr:  Ident.MULEQ Expr 
	Expr:  Ident.DIVEQ Expr 
	Expr:  Ident.    (61)
	Primary:  Ident.'(' ArgListOpt ')' 

	ADDEQ  shift 56
	SUBEQ  shift 57
	MULEQ  shift 58
	DIVEQ  shift 59
	'='  shift 55
	'('  shift 60
	.  reduce 61 (src line 111)


state 4
	Expr:  Var.'=' Expr 
	Expr:  Var.ADDEQ Expr 
	Expr:  Var.SUBEQ Expr 
	Expr:  Var.MULEQ Expr 
	Expr:  Var.DIVEQ Expr 

	ADDEQ  shift 62
	SUBEQ  shift 63
	MULEQ  shift 64
	DIVEQ  shift 65
	'='  shift 61
	.  error


state 5
	Expr:  ArrIndex.'=' Expr 
	Expr:  ArrIndex.ADDEQ Expr 
	Expr:  ArrIndex.SUBEQ Expr 
	Expr:  ArrIndex.MULEQ Expr 
	Expr:  ArrIndex.DIVEQ Expr 
	Primary:  ArrIndex.    (91)

	ADDEQ  shift 67
	SUBEQ  shift 68
	MULEQ  shift 69
	DIVEQ  shift 70
	'='  shift 66
	.  reduce 91 (src line 165)


state 6
	Expr:  '!'.Expr 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Expr  goto 71
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 7
	Expr:  '-'.Expr 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Expr  goto 72
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 8
	Expr:  '{'.Ids '}' LAMB Expr 
	Primary:  '{'.KvsOpt '}' 
	KvsOpt: .    (97)

	IDENT  shift 77
	STRING  shift 79
	.  reduce 97 (src line 181)

	Ident  goto 75
	Ids  goto 73
	KvsOpt  goto 74
	Kvs  goto 76
	Kv  goto 78

state 9
	Expr:  FOR.IDENT ',' IDENT IN Expr DO Expr END 
	Expr:  FOR.IDENT IN Expr DO Expr END 

	IDENT  shift 80
	.  error


state 10
	Expr:  IF.Expr THEN EExpr END 
	Expr:  IF.Expr THEN EExpr ELSE EExpr END 
	Expr:  IF.Expr THEN EExpr Elseifs END 
	Expr:  IF.Expr THEN EExpr Elseifs ELSE EExpr END 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Expr  goto 81
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 11
	Expr:  SWITCH.Expr Cases END 
	Expr:  SWITCH.Expr Cases DEFAULT ':' EExpr END 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Expr  goto 82
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 12
	Expr:  BREAK.    (57)

	.  reduce 57 (src line 102)


state 13
	Expr:  IDENT.LAMB Expr 
	Ident:  IDENT.    (82)

	LAMB  shift 83
	.  reduce 82 (src line 153)


state 14
	Expr:  CONST.Expr 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Expr  goto 84
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 15
	Expr:  Primary.    (62)

	.  reduce 62 (src line 112)


state 16
	Expr:  FUNCTION.Ident '(' Idss ')' EExpr END 
	Expr:  FUNCTION.'(' Idss ')' EExpr END 

	IDENT  shift 87
	'('  shift 86
	.  error

	Ident  goto 85

state 17
	Expr:  NUMBER.'~' NUMBER 
	Primary:  NUMBER.    (83)

	'~'  shift 88
	.  reduce 83 (src line 156)


state 18
	Primary:  BOOL.    (84)

	.  reduce 84 (src line 158)


state 19
	Primary:  STRING.    (85)

	.  reduce 85 (src line 159)


state 20
	Primary:  NIL.    (86)

	.  reduce 86 (src line 160)


state 21
	Primary:  '('.Expr ')' 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Expr  goto 89
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 22
	Primary:  '['.ArgListOpt ']' 
	ArgListOpt: .    (104)

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  reduce 104 (src line 195)

	Expr  goto 92
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	ArgList  goto 91
	Acc  goto 23
	ArgListOpt  goto 90

state 23
	Primary:  Acc.    (92)

	.  reduce 92 (src line 166)


state 24
	Expr:  Expr '+'.Expr 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Expr  goto 93
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 25
	Expr:  Expr '-'.Expr 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Expr  goto 94
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 26
	Expr:  Expr '*'.Expr 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Expr  goto 95
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 27
	Expr:  Expr '/'.Expr 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Expr  goto 96
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 28
	Expr:  Expr '^'.Expr 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Expr  goto 97
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 29
	Expr:  Expr '&'.Expr 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Expr  goto 98
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 30
	Expr:  Expr '|'.Expr 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Expr  goto 99
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 31
	Expr:  Expr EQ.Expr 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Expr  goto 100
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 32
	Expr:  Expr EQT.Expr 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Expr  goto 101
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 33
	Expr:  Expr NOTEQT.Expr 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Expr  goto 102
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 34
	Expr:  Expr '%'.Expr 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Expr  goto 103
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 35
	Expr:  Expr ';'.Expr 
	Expr:  Expr ';'.    (14)

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  reduce 14 (src line 58)

	Expr  goto 104
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 36
	Expr:  Expr AND.Expr 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Expr  goto 105
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 37
	Expr:  Expr OR.Expr 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Expr  goto 106
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 38
	Expr:  Expr NOTEQ.Expr 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Expr  goto 107
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 39
	Expr:  Expr GT.Expr 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error

	Expr  goto 108
	Ident  goto 3
	Var  goto 4
	ArrIndex  goto 5
	Primary  goto 15
	Acc  goto 23

state 40
	Expr:  Expr GTE.Expr 

	IDENT  shift 13
	NUMBER  shift 17
	STRING  shift 19
	BOOL  shift 18
	NIL  shift 20
	IF  shift 10
	FOR  shift 9
	CONST  shift 14
	SWITCH  shift 11
	FUNCTION  shift 16
	BREAK  shift 12
	'-'  shift 7
	'!'  shift 6
	'['  shift 22
	'{'  shift 8
	'('  shift 21
	.  error
